[doc] Split design guide into multiple pages [skip appveyor]
Improve some titles and re-arrange several sections (e.g. in Metafunctions).
Remove section about I/O extension from design guide as outdated and
unnecessary (in design guide).

[skip azp]

--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -27,19 +27,18 @@
 }
 
 .admonition-title { font-weight: bold;}
-.toctree-wrapper,
-.contents
+.toctree-wrapper
 {
   display: inline-block;
   border: 1px solid #dcdcdc;
   padding: 1em;
   margin: 0 2em;
 }
+.toctree-wrapper .caption,
+.toctree-wrapper .topic-title { font-weight: bold;}
+
 .footer
 {
     text-align: left;
     font-size: 80%;
 }
-.toctree-wrapper .caption,
-.toctree-wrapper .topic-title { font-weight: bold;}
-
